Changes copy; final version

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
         </div>
 
         <div id="page2">
-            <div class="invitation-header">You are invited...</div>
+            <div class="invitation-header">Tuesday 24th February</div>
             <div class="invitation-body">
                 <p>Our first outing will be for breakfast around <strong>9am</strong>. Please arrive at <b>the spot</b> at your earliest convenience.</p>
                 <p>To make sure you're ready for everything, please bring:</p>
